--- a/ml-complexity-estimator/extension/popup.html
+++ b/ml-complexity-estimator/extension/popup.html
@@ -8,6 +8,7 @@
   <button id="analyzeBtn" class="button">Analyze Current File</button>
   <div id="status"></div>
   <div id="results"></div>
+  <script src="analyzer.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
